@@ -36,6 +36,7 @@ Bugs fixed:
 - 3416164 Don't write CIM_IndicationService to disk
 - 3495801 Correction to 3495343
 - 3495789 Makefile improvements for test suite
+- 3495806 isChild() can cause a provider mismatch
 
 Changes in 1.3.13
 =================
